--- a/about/me.html
+++ b/about/me.html
@@ -99,7 +99,7 @@
         <footer class="article-footer">
             <a
                 data-url="http://bran-nie.github.io/blog/about/me.html"
-                data-id="ckf0w4p4d0000xk3v1gcj6jkw"
+                data-id="ckf0wyoos0000kq3v0pb8c9b9"
                 class="article-share-link"
                 >Share</a
             >
@@ -164,7 +164,7 @@
   </div>
 
   
-    <div>toc</div>
+    <div>toaacAbout me --- About me</div>
 
  
 
