--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <footer class="article-footer">
             <a
                 data-url="http://bran-nie.github.io/blog/2020/09/12/bran/"
-                data-id="ckf0w4p4f0001xk3v1i3j4u3z"
+                data-id="ckf0wyoox0002kq3vazptg6pv"
                 class="article-share-link"
                 >Share</a
             >
@@ -147,7 +147,7 @@
         <footer class="article-footer">
             <a
                 data-url="http://bran-nie.github.io/blog/2020/09/12/img-test/"
-                data-id="ckf0w4p4j0003xk3va5kn9y4w"
+                data-id="ckf0wyooz0003kq3vh1h8fp9x"
                 class="article-share-link"
                 >Share</a
             >
@@ -190,7 +190,7 @@
         <footer class="article-footer">
             <a
                 data-url="http://bran-nie.github.io/blog/2020/09/12/test-img/"
-                data-id="ckf0w4p4k0004xk3vc8zx5wmk"
+                data-id="ckf0wyop00004kq3vbenu5elu"
                 class="article-share-link"
                 >Share</a
             >
@@ -264,7 +264,7 @@
   </div>
 
   
-    <div>toc</div>
+    <div>toaac --- </div>
 
  
 
